force-app/main/default/objects/Reva_Meal_Booking__c/Reva_Meal_Booking__c.object-meta.xml
<CustomObject>
    <description>Reva Meal bookings store all the details of Reva Hostel Meal bookings, including details of the Contact(Student/Staff/Non-Staff)</description>
    <label>REVA Meal Booking</label>
    <nameField>
        <displayFormat>Booking-ID-{0000}</displayFormat>
        <label>REVA Meal Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REVA Meal Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>