force-app/main/default/objects/Reva_Meal_Booking__c/fields/Booking_For__c.field-meta.xml
<CustomField>
    <fullName>Booking_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking For</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Reva_Meal_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>