force-app/main/default/objects/Reva_Meal_Booking__c/fields/Booking_For_User__c.field-meta.xml
<CustomField>
    <fullName>Booking_For_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to track meal bookings done by salesforce users and not portal users.</description>
    <label>Booking For</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reva_Meal_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>