force-app/main/default/objects/Reva_Meal_Booking__c/fields/Display_Time__c.field-meta.xml
<CustomField>
    <fullName>Display_Time__c</fullName>
    <formula>Reva_Mess_Menu__r.End_Time__c -  (10 * 60 * 1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display End Time</label>
    <type>Time</type>
</CustomField>