force-app/main/default/objects/Reva_Meal_Booking__c/fields/Meal_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Meal_Feedback__c</fullName>
    <description>This Field used give feedback of meal</description>
    <label>Meal Feedback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>