force-app/main/default/objects/Reva_Meal_Booking__c/fields/Meal_start_time__c.field-meta.xml
<CustomField>
    <fullName>Meal_start_time__c</fullName>
    <formula>Reva_Mess_Menu__r.Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meal start time</label>
    <type>Time</type>
</CustomField>