force-app/main/default/objects/Reva_Meal_Booking__c/fields/Reva_Meal_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Reva_Meal_Booking_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>REVA Meal Booking Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>