force-app/main/default/objects/Reva_Meal_Booking__c/fields/Reva_Meal_Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Reva_Meal_Booking_Status__c</fullName>
    <label>REVA Meal Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Instant Meal</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Availed</fullName>
            </value>
            <value>
                <fullName>Missed Meal</fullName>
            </value>
            <value>
                <fullName>Missed Meal Charge Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>