force-app/main/default/objects/Reva_Meal_Booking__c/fields/Reva_Meal_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Reva_Meal_QR_Code__c</fullName>
    <formula>IMAGE(IF(TEXT(Reva_Meal_Booking_Status__c) == &quot;Booked&quot;,
    &apos;https://chart.googleapis.com/chart?chs=250x250&amp;cht=qr&amp;chl={&apos; +
    &apos;StudentRegistrationNumber : &quot;&apos; &amp; Booking_For__r.SRN_Number__c &amp; &apos;&quot;,&apos; +
    &apos;MenuName : &quot;&apos; &amp; Reva_Mess_Menu__r.Name &amp; &apos;&quot;,&apos; +
    &apos;BookingDatetime : &quot;&apos; &amp; TEXT(Reva_Meal_Booking_Date__c) &amp; &apos;&quot;}&apos;,
    &apos;&apos;
), &apos;QR Code&apos;,80,80)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>REVA Meal QR Code</label>
    <type>Text</type>
</CustomField>