force-app/main/default/objects/Reva_Meal_Booking__c/fields/Reva_Meal_Timing__c.field-meta.xml
<CustomField>
    <fullName>Reva_Meal_Timing__c</fullName>
    <formula>LPAD(TEXT(HOUR(Reva_Mess_Menu__r.Start_Time__c)), 2, &apos;0&apos;) + &apos;:&apos; + 
LPAD(TEXT(MINUTE(Reva_Mess_Menu__r.Start_Time__c)), 2, &apos;0&apos;) + &apos; - &apos; + 
LPAD(TEXT(HOUR(Reva_Mess_Menu__r.End_Time__c)), 2, &apos;0&apos;) + &apos;:&apos; + 
LPAD(TEXT(MINUTE(Reva_Mess_Menu__r.End_Time__c)), 2, &apos;0&apos;)</formula>
    <label>REVA Meal Timing</label>
    <type>Text</type>
</CustomField>