force-app/main/default/objects/Reva_Meal_Booking__c/fields/Reva_Mess_Menu__c.field-meta.xml
<CustomField>
    <fullName>Reva_Mess_Menu__c</fullName>
    <description>This field is used to select the Menu for the meal</description>
    <label>REVA Mess Menu</label>
    <referenceTo>Reva_Mess_Menu__c</referenceTo>
    <relationshipLabel>REVA Meal Bookings</relationshipLabel>
    <relationshipName>Reva_Meal_Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>