force-app/main/default/objects/Reva_Meal_Booking__c/fields/Type_of_meal__c.field-meta.xml
<CustomField>
    <fullName>Type_of_meal__c</fullName>
    <formula>TEXT(Reva_Mess_Menu__r.Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of meal</label>
    <type>Text</type>
</CustomField>