force-app/main/default/objects/Reva_Meal_Booking__c/validationRules/Reva_Meal_Booking_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Reva_Meal_Booking_Date</fullName>
    <active>false</active>
    <errorConditionFormula>OR(AND(
        ISNEW() ,
        Reva_Meal_Booking_Date__c &lt;&gt; TODAY(),
        Reva_Meal_Booking_Date__c &lt;&gt; TODAY() + 1
),AND(  NOT(ISNEW())  ,  OR( ISCHANGED(Reva_Meal_Booking_Date__c) , ISCHANGED(Reva_Meal_Booking_Date__c)),
Reva_Meal_Booking_Date__c &lt;&gt; TODAY(),
        Reva_Meal_Booking_Date__c &lt;&gt; TODAY() + 1
 ))</errorConditionFormula>
    <errorDisplayField>Reva_Meal_Booking_Date__c</errorDisplayField>
    <errorMessage>Meal Booking date should be Today or Tomorrow</errorMessage>
</ValidationRule>